--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             </div>
         </div>
         <div class="hero-background">
-            <div id="stars"></div>
-            <div id="stars2"></div>
-            <div id="stars3"></div>
+            <div class="black-hole-container">
+                <img src="assets/images/blackhole.jpg" alt="Black Hole" class="black-hole-image">
+            </div>
         </div>
     </section>
 
