--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="hero-background">
             <div class="black-hole-container">
-                <img src="assets/images/blackhole.jpg" alt="Black Hole" class="black-hole-image">
+                <img src="assets/images/balckhole.jpg" alt="Black Hole" class="black-hole-image">
             </div>
         </div>
     </section>
