social media add

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                 <h4>AstroX</h4>
                 <p>Making Life Multiplanetary</p>
                 <div class="social-links">
-                    <a href="#" class="social-link">Twitter</a>
-                    <a href="#" class="social-link">Instagram</a>
-                    <a href="#" class="social-link">LinkedIn</a>
+                    <a href="https://x.com/chinmaybhattt" class="social-link">Twitter</a>
+                    <a href="https://www.instagram.com/chinmaybhattt" class="social-link">Instagram</a>
+                    <a href="https://www.linkedin.com/in/chinmaybhattt/" class="social-link">LinkedIn</a>
                 </div>
             </div>
             <div class="footer-section">
@@ -135,9 +135,9 @@
             <div class="footer-section">
                 <h4>Contact</h4>
                 <ul>
-                    <li>info@astrox.com</li>
-                    <li>+1 (555) 123-4567</li>
-                    <li>Cape Canaveral, FL</li>
+                    <li>chinmaybhatt26@gmail.com</li>
+                    <li>+91 8852924002</li>
+                    <li>Jaipur, Rajasthan</li>
                 </ul>
             </div>
         </div>
